# Capstone-Project

./: .gitignore  LICENSE  README.md
etl-pipeline/: .coveragerc  .flake8  .gitignore  .sqlfluff  README.md  pyproject.toml  requirements.txt
etl-pipeline/config/: db_config.py  env_config.py  kaggle_config.py
etl-pipeline/notebooks/: boxscore_analysis.ipynb  merge_and_transform_boxscores_games.ipynb  merge_and_transform_playerinfo_salaries.ipynb  merge_boxscores_games.ipynb  transform_boxscore.ipynb  transform_games.ipynb  transform_playerinfo.ipynb  transform_salaries.ipynb
etl-pipeline/scripts/: run_etl.py
etl-pipeline/src/extract/: extract.py  extract_boxscores.py  extract_games.py  extract_playerinfo.py  extract_salaries.py
etl-pipeline/src/load/: create_player_info_and_salaries.py  create_player_stats.py  create_team_stats.py  load_player_info_and_salaries.py  load_player_stats.py  load_team_stats.py
etl-pipeline/src/transform/: clean_boxscores.py  clean_games.py  clean_playerinfo.py  clean_salaries.py  merge_boxscores_games.py  merge_playerinfo_salaries.py  transform.py  transform_merged_boxscores_games.py
etl-pipeline/src/utils/: database_utils.py  kaggle_utils.py  remove_special_characters_utils.py  schema_utils.py  table_exists_utils.py  trimming_whitespace_utils.py
etl-pipeline/tests/: run_tests.py
etl-pipeline/tests/unit_tests/: test_clean_boxscores.py  test_clean_games.py  test_clean_playerinfo.py  test_clean_salaries.py  test_create_player_info_and_salaries.py  test_create_player_stats.py  test_create_team_stats.py  test_database_utils.py  (+19 more)
(+22 files in other folders)
